--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div class="text">
             <h3>Impressionism booklet</h3>
           </div>
-          <div class="image fill-height align-right">
+          <div class="image">
             <img src="./assets/impressionismwhfinal1.png" />
           </div>
         </a>
@@ -54,7 +54,7 @@
           <div class="text">
             <h3>REI logo redesign</h3>
           </div>
-          <div class="image align-left">
+          <div class="image">
             <img src="./assets/reiwhgreenlogos.png" />
           </div>
         </a>
@@ -62,13 +62,13 @@
           <div class="text">
             <h3>Gardening society logo</h3>
           </div>
-          <div class="image"><img src="./assets/gardeningwhlogo3.png" /></div>
+          <div class="image"><img src="assets/gardening/gardeningwhlogos/gardeningwhlogo5.png" /></div>
         </a>
         <a class="card grey" href="./monsta.html">
           <div class="text">
             <h3>Monsta Math branding</h3>
           </div>
-          <div class="image align-left">
+          <div class="image">
             <img src="./assets/monstawhyellowlog.png" />
           </div>
         </a>
@@ -76,7 +76,7 @@
           <div class="text">
             <h3>Indian Horse movie poster</h3>
           </div>
-          <div class="image fill-height align-left">
+          <div class="image">
             <img src="./assets/indianhorse/indianhorsewhposter.jpg" />
           </div>
         </a>
@@ -84,7 +84,7 @@
           <div class="text">
             <h3>Ice skating poster</h3>
           </div>
-          <div class="image fill-height align-left">
+          <div class="image">
             <img src="./assets/iceskatingwhblueposter.jpg" />
           </div>
         </a>
@@ -92,7 +92,7 @@
           <div class="text">
             <h3>Toms River bookjacket</h3>
           </div>
-          <div class="image fill-height align-left">
+          <div class="image">
             <img src="./assets/tomsriverwhfrontcover.jpg" />
           </div>
         </a>
