--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
           <div class="text">
             <h3>Gardening society logo</h3>
           </div>
-          <div class="image"><img src="assets/gardening/gardeningwhlogos/gardeningwhlogo5.png" /></div>
+          <div class="image"><img src="assets/gardening/gardeningwhlogos/gardeningwhlogo3.png" /></div>
         </a>
         <a class="card grey" href="./monsta.html">
           <div class="text">
             <h3>Monsta Math branding</h3>
           </div>
-          <div class="image">
+          <div class="image narrow">
             <img src="./assets/monstawhyellowlog.png" />
           </div>
         </a>
